DOC-2112: 6.6.1-release-notes.adoc
Copy-edit: s/image/Image/.

--- a/modules/ROOT/pages/6.6.1-release-notes.adoc
+++ b/modules/ROOT/pages/6.6.1-release-notes.adoc
@@ -205,7 +205,7 @@ When either Safari or Firefox were the host browsers, however, the border did no
 
 {productname} 6.6.1 corrects this. When either Safari or Firefox are the host browsers, `iframe` dialog components now highlight when taking focus, as expected.
 
-=== Right-clicking on an image that was in a non-editable area would open the image plugin’s context menu
+=== Right-clicking on an image that was in a non-editable area would open the Image plugin’s context menu
 //#TINY-10016
 
 // CCFR here
