--- a/modules/ROOT/pages/changelog.adoc
+++ b/modules/ROOT/pages/changelog.adoc
@@ -7,7 +7,7 @@ NOTE: This is the {productname} Community version changelog. For information abo
 == 6.6.1 - 2023-08-02
 
 === Added
-* New filtering option, `pad_empty_with_br`. Set to `true` to pad empty block elements with `<br>` tags instead of the `&nbsp;` character entity.
+* New filtering option, `pad_empty_with_br`. Set to `true` to pad empty block elements with `<br>` tags instead of the `+&nbsp;+` character entity.
 
 === Improved
 * When Safari is the host browser, content updates for iframe dialog components with `streamContent: true` set are now throttled to 500ms intervals.
