--- a/modules/ROOT/pages/changelog.adoc
+++ b/modules/ROOT/pages/changelog.adoc
@@ -4,6 +4,28 @@
 
 NOTE: This is the {productname} Community version changelog. For information about the latest {cloudname} or {enterpriseversion} Release, see: xref:release-notes.adoc[{productname} Release Notes].
 
+== 6.6.1 - 2023-08-02
+
+=== Added
+* Restored filtering option, `pad_empty_with_br`. Set to `true` to pad empty block elements with `<br>` tags instead of the `+&nbsp;+` character entity.
+
+=== Improved
+* When Safari is the host browser, content updates for iframe dialog components with `streamContent: true` set are now throttled to 500ms intervals.
+
+=== Changed
+* API comments/documentation: a markup typo and run-on sentences both corrected.
+
+=== Fixed
+* On Safari and Firefox, scroll positions were not always maintained when updating the content of a `streamContent: true` iframe dialog component.
+* On Safari, iframe dialog components did not consistently autoscroll to the end of the scrollable area when `streamContent: true` was set.
+* Scrolling behavior was inconsistent when updating a `streamContent: true` iframe dialog component with content lacking an HTML document type declaration.
+* A warning message was sometimes printed to the browser console when closing a dialog that contained an iframe component.
+* Lists could not be created within editable areas nested inside non-editable areas.
+* On Safari and Firefox, the border around `iframe` dialog components did not highlight when focused.
+* Right-clicking on an image in a non-editable context opened the Image context menu.
+* The `color_cols` option was not respected when a custom `color_map` was defined.
+* The `color_cols` options were were not rounded to the nearest number when set to a decimal number.
+
 == 6.6.0 - 2023-07-12
 
 === Added
