--- a/modules/ROOT/partials/configuration/pad_empty_with_br.adoc
+++ b/modules/ROOT/partials/configuration/pad_empty_with_br.adoc
@@ -3,9 +3,13 @@
 
 include::partial$misc/admon-requires-6.6.1v.adoc[]
 
-By default, {productname} places non-breaking space entities — `+&nbsp;+` — as placeholders inside empty block elements. For example,  the empty paragraph will be serialized to `<p>&nbsp;</p>`.
+By default, {productname} places non-breaking space entities — `+&nbsp;+` — as placeholders inside empty block elements.
 
-The `+pad_empty_with_br+` option enables {productname} to change this default placeholder to a break tag: `+<br>+`. For example,  the empty paragraph will be serialized to `<p><br></p>`.
+For example, the empty paragraph `+<p></p>+` will, by default, be serialized to `+<p>&nbsp;</p>+`.
+
+The `+pad_empty_with_br+` option enables {productname} to change this default placeholder to a break tag: `+<br>+`.
+
+For example, when this option is set to `true`, an empty paragraph, `+<p></p>+`, is serialized to `+<p><br></p>+`.
 
 *Type:* `+Boolean+`
 
