DOC-2112: admon-releasenotes-for-stable.adoc
Copy-edits.

--- a/modules/ROOT/partials/misc/admon-releasenotes-for-stable.adoc
+++ b/modules/ROOT/partials/misc/admon-releasenotes-for-stable.adoc
@@ -1,1 +1,1 @@
-NOTE: This is the {cloudname} and {enterpriseversion} release notes. For information on the latest community version of {productname}, see: xref:changelog.adoc[{productname} Changelog].
+NOTE: These are the {cloudname} and {enterpriseversion} release notes. For information on the latest community version of {productname}, see the xref:changelog.adoc[{productname} Changelog].
