DOC-2154: 6.6-release-notes.adoc
Added outline for Tiy-9385 write-up to Improvements section.

--- a/modules/ROOT/pages/6.6-release-notes.adoc
+++ b/modules/ROOT/pages/6.6-release-notes.adoc
@@ -192,6 +192,12 @@ For more information about this component, see the xref:dialog-components.adoc#i
 
 For more information about dialogs, see the xref:dialog-configuration.adoc[Dialog configuration] documentation.
 
+=== Improved detection of scrollable containers when the `ui_mode: 'split'` option is set.
+//#TINY-9385
+
+//CCFR
+
+
 
 [[changes]]
 == Changes
