--- a/modules/ROOT/partials/configuration/text_color.adoc
+++ b/modules/ROOT/partials/configuration/text_color.adoc
@@ -40,6 +40,8 @@ If neither `color_cols` nor `color_cols_background` options are set, background 
 
 ==== Example: using `color_cols_background`
 
+This example sets the number of text color grid columns to **10** then sets the background text color grid to display **3** columns.
+
 [source,js]
 ----
 tinymce.init({
@@ -66,6 +68,8 @@ If neither `color_cols` nor `color_cols_foreground` options are set, background 
 *Default value:* 5
 
 ==== Example: using `color_cols_foreground`
+
+This example sets the number of text color grid columns to **10** then sets the foreground text color grid to display **3** columns.
 
 [source,js]
 ----
