--- a/modules/ROOT/partials/configuration/powerpaste_html_import.adoc
+++ b/modules/ROOT/partials/configuration/powerpaste_html_import.adoc
@@ -1,14 +1,42 @@
 [[powerpaste_html_import]]
 == `+powerpaste_html_import+`
 
-This option controls how content pasted from sources other than Microsoft Word and Google Docs are filtered. Note that this includes content copied from {productname} itself.
+This option controls how content pasted from sources other than Microsoft Word and Google Docs are filtered.
 
 *Type:* `+String+`
 
 *Default value:* `+'clean'+`
 
-The supported values are:
+*Possible values:* `+'clean'+`, `+merge+`, `+prompt+`
 
-* `+clean+` - Preserve the structure of the content such as headings, tables, and lists but remove inline styles and classes. This results in simple content that uses the site's CSS stylesheet while retaining the semantic structure from the original document.
-* `+merge+` - Preserve the inline formatting and structure of the original document. Invalid and proprietary styles, tags and attributes are still removed ensuring that the HTML is valid while more closely matching the original document formatting.
-* `+prompt+` - Prompt the user to choose between the clean and merge options after attempting to paste HTML content.
+What the possible values do:
+
+[cols="1,1"]
+|===
+|Value |Behavior
+
+|`+clean+`
+|Preserves the structure of the content such as headings, tables, and lists.
+
+Removes inline styles and classes.
+
+This results in simple content that uses the site’s CSS stylesheet while retaining the semantic structure of the original document.
+
+|`+merge+`
+|Preserves the inline formatting and structure of the original document.
+
+Removes invalid and proprietary styles, tags and attributes.
+
+This ensures the HTML is valid while more closely matching the original document formatting.
+
+|`+prompt+`
+|Prompts the user to choose between the `+clean+` and `+merge+` options after attempting to paste HTML content.
+|===
+
+[IMPORTANT]
+.Pasting from a {productname} instance to a {productname} instance
+====
+Content copied or cut from a {productname} instance and then pasted into a {productname} instance (eg, copyied or cut from one part of a {productname} document and pasted into another place within the same document) is not processed by `+powerpaste_html_import+`.
+
+In this circumstance, whatever is copied or cut is exactly what is pasted.
+====
