DOC-2107: powerpaste_import_types.adoc
Edited so this material presents in the sections powerpaste_googledocs_import and poweraste_word_import equivalently to the presentation in the powerpaste_html_import section.

--- a/modules/ROOT/partials/plugins/powerpaste_import_types.adoc
+++ b/modules/ROOT/partials/plugins/powerpaste_import_types.adoc
@@ -1,7 +1,27 @@
-The supported string-based values are:
+*Possible values:* `+'clean'+`, `+merge+`, `+prompt+`
 
-* `+clean+` - Preserve the structure of the content such as headings, tables, and lists but remove inline styles and classes. This results in simple content that uses the site's CSS stylesheet while retaining the semantic structure from the original document.
-* `+merge+` - Preserve the inline formatting and structure of the original document. Invalid and proprietary styles, tags and attributes are still removed ensuring that the HTML is valid while more closely matching the original document formatting.
-* `+prompt+` - Prompt the user to choose between the clean and merge options after attempting to paste HTML content.
+What the supported string-based values do:
+
+[cols="1,1"]
+|===
+|Value |Behavior
+
+|`+clean+`
+|Preserves the structure of the content such as headings, tables, and lists.
+
+Removes inline styles and classes.
+
+This results in simple content that uses the site’s CSS stylesheet while retaining the semantic structure of the original document.
+
+|`+merge+`
+|Preserves the inline formatting and structure of the original document.
+
+Removes invalid and proprietary styles, tags and attributes.
+
+This ensures the HTML is valid while more closely matching the original document formatting.
+
+|`+prompt+`
+|Prompts the user to choose between the `+clean+` and `+merge+` options after attempting to paste HTML content.
+|===
 
 Alternatively, this option can take an asynchronous function that returns a https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise[Promise] which will resolve with the string `+clean+` or `+merge+`. This allows the paste mode to be dynamically set each time a user pastes relevant content. It can be used, for example, to replicate the `+prompt+` dialog with a custom dialog.
