DOC-2107: powerpaste_html_import.adoc
Copy-edit.

--- a/modules/ROOT/partials/configuration/powerpaste_html_import.adoc
+++ b/modules/ROOT/partials/configuration/powerpaste_html_import.adoc
@@ -9,7 +9,7 @@ This option controls how content pasted from sources other than Microsoft Word a
 
 *Possible values:* `+'clean'+`, `+merge+`, `+prompt+`
 
-What the possible values do:
+What the supported string-based values do:
 
 [cols="1,1"]
 |===
