DOC-1956: wordcount.adoc
Copy edit: missing comma no longer missing.

--- a/modules/ROOT/pages/wordcount.adoc
+++ b/modules/ROOT/pages/wordcount.adoc
@@ -7,7 +7,7 @@
 
 The {pluginname} plugin adds functionality for counting words to the {productname} editor.
 
-When loaded the {pluginname} plugin:
+When loaded, the {pluginname} plugin:
 
 * places a word and character counter in the status bar.
 ** By default the counter appears adjacent the **Powered by Tiny** xref:statusbar-configuration-options.adoc#branding[product attribution logo].
