DOC-1956: wordcount.adoc
Markup typo corrected.

--- a/modules/ROOT/pages/wordcount.adoc
+++ b/modules/ROOT/pages/wordcount.adoc
@@ -51,7 +51,7 @@ The Word count plugin counts ‘words’ by delimiting strings at pre-defined wo
 |Solidus (aka forward slash)
 |**/**
 
-2+|include::partial$misc/admon-requires-6.5v.adoc
+2+|include::partial$misc/admon-requires-6.5v.adoc[]
 
 |Circumflex
 |**^**
