--- a/modules/ROOT/pages/6.6-release-notes.adoc
+++ b/modules/ROOT/pages/6.6-release-notes.adoc
@@ -197,7 +197,7 @@ For more information about dialogs, see the xref:dialog-configuration.adoc[Dialo
 
 When a {productname} instance has it’s xref:ui-mode-configuration-options.adoc[UI mode] set to `split`, support for setting the editor inside a scrollable container is enabled and {productname} editor elements — such as pop-ups, menus, and inline dialogs — are rendered in separate containers and inserted as sibling elements to the editor.
 
-Previously, howver, identifying all scrollable parent elements in such a setup was done with only a naive check. As a consequence, when other overflow properties — such as `overflow-x` — were introduced, the {productname} editor and the {productname} toolbar could behave unexpectedly in some circumstance.
+Previously, however, identifying all scrollable parent elements in such a setup was done with only a naive check. As a consequence, when other overflow properties — such as `overflow-x` — were introduced, the {productname} editor and the {productname} toolbar could behave unexpectedly in some circumstance.
 
 In {productname} 6.6.1, the naive check has been replaced with specific edge case coverage and a related test.
 
