--- a/modules/ROOT/partials/configuration/text_color.adoc
+++ b/modules/ROOT/partials/configuration/text_color.adoc
@@ -183,9 +183,11 @@ tinymce.init({
 [[color_map_foreground]]
 === `color_map_foreground`
 
-When custom colors are selected from the Text color menus, these colors are now stored in the separate color palette, `color_map_foreground`.
+This option allows for specifying a map of the text colors that will appear in the foreground text color grid.
 
-When chosen, these custom colors are still added to the Text color menu. But they are now stored separately from the default color sets.
+If it is not set, the foreground text color grid takes it values from the `+color_map+` array.
+
+And, if the `+color_map+` array is, further, not set, the background text color grid takes it values from the {productname} default color set.
 
 That is, the foreground text color grid takes its values in the following priority order:
 
