--- a/modules/ROOT/partials/configuration/text_color.adoc
+++ b/modules/ROOT/partials/configuration/text_color.adoc
@@ -77,7 +77,7 @@ tinymce.init({
   selector: 'textarea',  // change this value according to your html
   toolbar: 'backcolor forecolor',
   color_cols: 10,
-  color_cols_foreground: 3
+  color_cols_foreground: 3,
 });
 ----
 
