--- a/modules/ROOT/pages/6.6.2-release-notes.adoc
+++ b/modules/ROOT/pages/6.6.2-release-notes.adoc
@@ -300,6 +300,14 @@ Previously, however, the `color_cols` option was not respected when a custom xre
 
 {productname} 6.6.2 addresses this. As of this update, setting a `color_cols` value over-rides the default method of calculating the number of displayed columns, as expected.
 
+[NOTE]
+.Known issue
+====
+Setting `color_cols: 5` still results in the `color_cols` value not being used.
+
+When `color_cols` is set to the default number of columns displayed by a {productname} color selection grid (ie 5), the default method for calculating the number of displayed columns is used.
+====
+
 
 === The `color_cols` options were were not rounded to the nearest number when set to a decimal number
 //#TINY-9737
@@ -315,18 +323,6 @@ Values **x.1–x.4** are rounded to **x**.
 Values **x.5–x.9** are rounded to **x+1**.
 
 NOTE: If `color_cols` is set to a decimal value that would, after rounding, be an invalid value (for example, **0.1**), {productname} continues to act as it did previously. For invalid values, the `color_cols` option is treated as if it has not been set and reverts to displaying the color selection grid with the default five columns.
-
-
-=== The `color_cols` option was not respected when set to the value 5 with a custom `color_map` specified
-//TINY-10126
-
-Previously, when `color_cols: 5` was set, the assigned value was not used.
-
-Instead, when `color_cols` was set to the default number of columns displayed by a {productname} color selection grid (ie 5), the default method for calculating the number of displayed columns is used.
-
-For {productname} 6.6.2, the logic for calculating the default `color_cols` values was re-written. As of this release, {productname} now uses either the `color_cols` option, with its default calculated on the base color map, or the value calculated by custom color maps.
-
-This ensures a set `color_cols` value is always used, even when that value matches the default value.
 
 
 === An "Uncaught TypeError: Cannot read properties of null" error would sometimes be thrown when updating the content of a `streamContent: true` iframe dialog component
